fixed whisper on mobile phones

--- a/src/frontend_backend_prototype/style/styleMain.css
+++ b/src/frontend_backend_prototype/style/styleMain.css
@@ -129,6 +129,14 @@
     {
         width: 74vw !important;
     }
+    #output 
+    {
+        width: 300px !important;
+    }
+    #whisper li 
+    {
+        padding: 1vw;
+    }
 }
 :root
 {
